// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/locations/LocationList Snapshots Empty 1`] = `
<div>
  <div
    class="ui-datatable"
  >
    <div
      class="v-table__overflow"
    >
      <table
        class="v-datatable v-table v-datatable--select-all theme--light"
      >
        <thead>
          <tr>
            <th>
              <div
                class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                  </div>
                </div>
              </div>
            </th>
            <th
              aria-label="Location name / category: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="column sortable text-xs-left"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <span>
                
        Location name / category
      
              </span>
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                arrow_upward
              </i>
            </th>
            <th
              aria-label="Capacity: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="column sortable text-xs-center"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                arrow_upward
              </i>
              <span>
                
        Capacity
      
              </span>
            </th>
            <th
              aria-label="Associated events: Not sorted."
              aria-sort="none"
              class="column text-xs-right"
              role="columnheader"
              scope="col"
            >
              <span>
                
        Associated events
      
              </span>
            </th>
            <th
              aria-label="Manage: Not sorted."
              aria-sort="none"
              class="column text-xs-center"
              role="columnheader"
              scope="col"
            >
              <span>
                
        Manage
      
              </span>
            </th>
          </tr>
          <tr
            class="v-datatable__progress"
          >
            <th
              class="column"
              colspan="5"
            />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="text-xs-center"
              colspan="5"
            >
              No matching records found
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
   
  <div
    class="layout align-center"
  >
    <div
      class="flex grow justify-center"
    >
      <div
        class="layout justify-center"
      >
        <ul
          class="v-pagination theme--light"
        >
          <li>
            <button
              class="v-pagination__navigation v-pagination__navigation--disabled"
              type="button"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
              >
                chevron_left
              </i>
            </button>
          </li>
          <li>
            <button
              class="v-pagination__item v-pagination__item--active primary"
              type="button"
            >
              1
            </button>
          </li>
          <li>
            <button
              class="v-pagination__navigation v-pagination__navigation--disabled"
              type="button"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
              >
                chevron_right
              </i>
            </button>
          </li>
        </ul>
      </div>
    </div>
     
    <div
      class="flex shrink"
    >
      <div
        class="v-input v-text-field v-select v-input--is-label-active v-input--is-dirty theme--light"
        role="combobox"
      >
        <div
          class="v-input__control"
        >
          <div
            class="v-input__slot"
          >
            <div
              class="v-select__slot"
            >
              <label
                aria-hidden="true"
                class="v-label v-label--active theme--light"
                style="left: 0px; position: absolute;"
              >
                Results Per Page
              </label>
              <div
                class="v-select__selections"
              >
                <div
                  class="v-select__selection v-select__selection--comma"
                >
                  10
                </div>
                <input
                  aria-label="Results Per Page"
                  aria-readonly="false"
                  autocomplete="on"
                  readonly="readonly"
                  type="text"
                />
              </div>
              <div
                class="v-input__append-inner"
              >
                <div
                  class="v-input__icon v-input__icon--append"
                >
                  <i
                    aria-hidden="true"
                    class="v-icon material-icons theme--light"
                  >
                    arrow_drop_down
                  </i>
                </div>
              </div>
            </div>
            <div
              class="v-menu"
            >
              <div
                class="v-menu__content theme--light "
                style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
              >
                <div
                  class="v-select-list v-card theme--light"
                >
                  <div
                    class="v-list theme--light"
                    role="list"
                  >
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__content"
                        >
                          <div
                            class="v-list__tile__title"
                          >
                            5
                          </div>
                        </div>
                      </a>
                    </div>
                    <div
                      class="primary--text"
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
                      >
                        <div
                          class="v-list__tile__content"
                        >
                          <div
                            class="v-list__tile__title"
                          >
                            10
                          </div>
                        </div>
                      </a>
                    </div>
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__content"
                        >
                          <div
                            class="v-list__tile__title"
                          >
                            15
                          </div>
                        </div>
                      </a>
                    </div>
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__content"
                        >
                          <div
                            class="v-list__tile__title"
                          >
                            25
                          </div>
                        </div>
                      </a>
                    </div>
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__content"
                        >
                          <div
                            class="v-list__tile__title"
                          >
                            30
                          </div>
                        </div>
                      </a>
                    </div>
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__content"
                        >
                          <div
                            class="v-list__tile__title"
                          >
                            50
                          </div>
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="v-text-field__details"
          >
            <div
              class="v-messages theme--light"
            >
              <div
                class="v-messages__wrapper"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/locations/LocationList Snapshots Loading 1`] = `
<div>
  <div
    class="ui-datatable"
  >
    <div
      class="v-table__overflow"
    >
      <table
        class="v-datatable v-table v-datatable--select-all theme--light"
      >
        <thead>
          <tr>
            <th>
              <div
                class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                  </div>
                </div>
              </div>
            </th>
            <th
              aria-label="Location name / category: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="column sortable text-xs-left"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <span>
                
        Location name / category
      
              </span>
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                arrow_upward
              </i>
            </th>
            <th
              aria-label="Capacity: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="column sortable text-xs-center"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                arrow_upward
              </i>
              <span>
                
        Capacity
      
              </span>
            </th>
            <th
              aria-label="Associated events: Not sorted."
              aria-sort="none"
              class="column text-xs-right"
              role="columnheader"
              scope="col"
            >
              <span>
                
        Associated events
      
              </span>
            </th>
            <th
              aria-label="Manage: Not sorted."
              aria-sort="none"
              class="column text-xs-center"
              role="columnheader"
              scope="col"
            >
              <span>
                
        Manage
      
              </span>
            </th>
          </tr>
          <tr
            class="v-datatable__progress"
          >
            <th
              class="column"
              colspan="5"
            >
              <div
                aria-valuemax="100"
                aria-valuemin="0"
                class="v-progress-linear"
                role="progressbar"
                style="height: 10px;"
              >
                <div
                  class="v-progress-linear__background primary"
                  style="height: 10px; opacity: 0.3; width: 100%;"
                />
                <div
                  class="v-progress-linear__bar"
                >
                  <div
                    class="v-progress-linear__bar__indeterminate v-progress-linear__bar__indeterminate--active"
                  >
                    <div
                      class="v-progress-linear__bar__indeterminate long primary"
                    />
                    <div
                      class="v-progress-linear__bar__indeterminate short primary"
                    />
                  </div>
                  <!---->
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody>
          <tr>
            <td
              class="text-xs-center"
              colspan="5"
            >
              No matching records found
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
   
  <div
    class="layout align-center"
  >
    <div
      class="flex grow justify-center"
    >
      <div
        class="layout justify-center"
      >
        <ul
          class="v-pagination v-pagination--disabled theme--light"
        >
          <li>
            <button
              class="v-pagination__navigation v-pagination__navigation--disabled"
              type="button"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
              >
                chevron_left
              </i>
            </button>
          </li>
          <li>
            <button
              class="v-pagination__item v-pagination__item--active primary"
              type="button"
            >
              1
            </button>
          </li>
          <li>
            <button
              class="v-pagination__navigation v-pagination__navigation--disabled"
              type="button"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
              >
                chevron_right
              </i>
            </button>
          </li>
        </ul>
      </div>
    </div>
     
    <div
      class="flex shrink"
    >
      <div
        class="v-input v-text-field v-select v-input--is-label-active v-input--is-dirty theme--light"
        role="combobox"
      >
        <div
          class="v-input__control"
        >
          <div
            class="v-input__slot"
          >
            <div
              class="v-select__slot"
            >
              <label
                aria-hidden="true"
                class="v-label v-label--active theme--light"
                style="left: 0px; position: absolute;"
              >
                Results Per Page
              </label>
              <div
                class="v-select__selections"
              >
                <div
                  class="v-select__selection v-select__selection--comma"
                >
                  10
                </div>
                <input
                  aria-label="Results Per Page"
                  aria-readonly="false"
                  autocomplete="on"
                  readonly="readonly"
                  type="text"
                />
              </div>
              <div
                class="v-input__append-inner"
              >
                <div
                  class="v-input__icon v-input__icon--append"
                >
                  <i
                    aria-hidden="true"
                    class="v-icon material-icons theme--light"
                  >
                    arrow_drop_down
                  </i>
                </div>
              </div>
            </div>
            <div
              class="v-menu"
            >
              <div
                class="v-menu__content theme--light "
                style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
              >
                <div
                  class="v-select-list v-card theme--light"
                >
                  <div
                    class="v-list theme--light"
                    role="list"
                  >
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__content"
                        >
                          <div
                            class="v-list__tile__title"
                          >
                            5
                          </div>
                        </div>
                      </a>
                    </div>
                    <div
                      class="primary--text"
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
                      >
                        <div
                          class="v-list__tile__content"
                        >
                          <div
                            class="v-list__tile__title"
                          >
                            10
                          </div>
                        </div>
                      </a>
                    </div>
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__content"
                        >
                          <div
                            class="v-list__tile__title"
                          >
                            15
                          </div>
                        </div>
                      </a>
                    </div>
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__content"
                        >
                          <div
                            class="v-list__tile__title"
                          >
                            25
                          </div>
                        </div>
                      </a>
                    </div>
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__content"
                        >
                          <div
                            class="v-list__tile__title"
                          >
                            30
                          </div>
                        </div>
                      </a>
                    </div>
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__content"
                        >
                          <div
                            class="v-list__tile__title"
                          >
                            50
                          </div>
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="v-text-field__details"
          >
            <div
              class="v-messages theme--light"
            >
              <div
                class="v-messages__wrapper"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/locations/LocationList Snapshots Populated 1`] = `
<div>
  <div
    class="ui-datatable"
  >
    <div
      class="v-table__overflow"
    >
      <table
        class="v-datatable v-table v-datatable--select-all theme--light"
      >
        <thead>
          <tr>
            <th>
              <div
                class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                  </div>
                </div>
              </div>
            </th>
            <th
              aria-label="Location name / category: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="column sortable text-xs-left"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <span>
                
        Location name / category
      
              </span>
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                arrow_upward
              </i>
            </th>
            <th
              aria-label="Capacity: Not sorted. Activate to sort ascending."
              aria-sort="none"
              class="column sortable text-xs-center"
              role="columnheader"
              scope="col"
              tabindex="0"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
                style="font-size: 16px;"
              >
                arrow_upward
              </i>
              <span>
                
        Capacity
      
              </span>
            </th>
            <th
              aria-label="Associated events: Not sorted."
              aria-sort="none"
              class="column text-xs-right"
              role="columnheader"
              scope="col"
            >
              <span>
                
        Associated events
      
              </span>
            </th>
            <th
              aria-label="Manage: Not sorted."
              aria-sort="none"
              class="column text-xs-center"
              role="columnheader"
              scope="col"
            >
              <span>
                
        Manage
      
              </span>
            </th>
          </tr>
          <tr
            class="v-datatable__progress"
          >
            <th
              class="column"
              colspan="5"
            />
          </tr>
        </thead>
        <tbody>
          <tr>
            <td>
              <div
                class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                primary=""
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        primary=""
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                  </div>
                </div>
              </div>
            </td>
             
            <td
              class="text-xs-undefined"
            >
              <div
                class="subheading primary--text"
              >
                
      Johnstonborough
    
              </div>
               
              <span
                class="v-chip font-weight-bold text-uppercase caption theme--light warning white--text"
                tabindex="0"
              >
                <span
                  class="v-chip__content"
                >
                  
      Indoor
    
                </span>
              </span>
            </td>
            <td
              class="text-xs-center"
            >
              
              81
            
            </td>
            <td
              class="text-xs-right"
            >
              <div
                class="text-truncate"
              >
                
      accusantium, saepe
    
              </div>
            </td>
            <td
              class="justify-center text-xs-center"
            >
              <div
                class="v-menu"
              >
                <button
                  class="v-btn theme--dark primary primary-text--text"
                  type="button"
                >
                  <div
                    class="v-btn__content"
                  >
                    
                Manage
               
                    <i
                      aria-hidden="true"
                      class="v-icon v-icon--right material-icons theme--dark"
                    >
                      arrow_drop_down
                    </i>
                  </div>
                </button>
                <div
                  class="v-menu__content theme--light "
                  style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                >
                   
                  <div
                    class="v-list theme--light"
                    role="list"
                  >
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__title"
                        >
                          Delete
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                primary=""
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        primary=""
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                  </div>
                </div>
              </div>
            </td>
             
            <td
              class="text-xs-undefined"
            >
              <div
                class="subheading primary--text"
              >
                
      Vivienberg
    
              </div>
               
              <span
                class="v-chip font-weight-bold text-uppercase caption theme--light warning white--text"
                tabindex="0"
              >
                <span
                  class="v-chip__content"
                >
                  
      Indoor
    
                </span>
              </span>
            </td>
            <td
              class="text-xs-center"
            >
              
              26
            
            </td>
            <td
              class="text-xs-right"
            >
              <div
                class="text-truncate"
              >
                
      ipsum, quibusdam
    
              </div>
            </td>
            <td
              class="justify-center text-xs-center"
            >
              <div
                class="v-menu"
              >
                <button
                  class="v-btn theme--dark primary primary-text--text"
                  type="button"
                >
                  <div
                    class="v-btn__content"
                  >
                    
                Manage
               
                    <i
                      aria-hidden="true"
                      class="v-icon v-icon--right material-icons theme--dark"
                    >
                      arrow_drop_down
                    </i>
                  </div>
                </button>
                <div
                  class="v-menu__content theme--light "
                  style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                >
                   
                  <div
                    class="v-list theme--light"
                    role="list"
                  >
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__title"
                        >
                          Delete
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                primary=""
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        primary=""
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                  </div>
                </div>
              </div>
            </td>
             
            <td
              class="text-xs-undefined"
            >
              <div
                class="subheading primary--text"
              >
                
      O'Konborough
    
              </div>
               
              <span
                class="v-chip font-weight-bold text-uppercase caption theme--light warning white--text"
                tabindex="0"
              >
                <span
                  class="v-chip__content"
                >
                  
      Indoor
    
                </span>
              </span>
            </td>
            <td
              class="text-xs-center"
            >
              
              32
            
            </td>
            <td
              class="text-xs-right"
            >
              <div
                class="text-truncate"
              >
                
      lorem
    
              </div>
            </td>
            <td
              class="justify-center text-xs-center"
            >
              <div
                class="v-menu"
              >
                <button
                  class="v-btn theme--dark primary primary-text--text"
                  type="button"
                >
                  <div
                    class="v-btn__content"
                  >
                    
                Manage
               
                    <i
                      aria-hidden="true"
                      class="v-icon v-icon--right material-icons theme--dark"
                    >
                      arrow_drop_down
                    </i>
                  </div>
                </button>
                <div
                  class="v-menu__content theme--light "
                  style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                >
                   
                  <div
                    class="v-list theme--light"
                    role="list"
                  >
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__title"
                        >
                          Delete
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                primary=""
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        primary=""
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                  </div>
                </div>
              </div>
            </td>
             
            <td
              class="text-xs-undefined"
            >
              <div
                class="subheading primary--text"
              >
                
      Dickinsonhaven
    
              </div>
               
              <span
                class="v-chip font-weight-bold text-uppercase caption theme--light warning white--text"
                tabindex="0"
              >
                <span
                  class="v-chip__content"
                >
                  
      Indoor
    
                </span>
              </span>
            </td>
            <td
              class="text-xs-center"
            >
              
              77
            
            </td>
            <td
              class="text-xs-right"
            >
              <div
                class="text-truncate"
              >
                
      schinner.com, baumbach.com
    
              </div>
            </td>
            <td
              class="justify-center text-xs-center"
            >
              <div
                class="v-menu"
              >
                <button
                  class="v-btn theme--dark primary primary-text--text"
                  type="button"
                >
                  <div
                    class="v-btn__content"
                  >
                    
                Manage
               
                    <i
                      aria-hidden="true"
                      class="v-icon v-icon--right material-icons theme--dark"
                    >
                      arrow_drop_down
                    </i>
                  </div>
                </button>
                <div
                  class="v-menu__content theme--light "
                  style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                >
                   
                  <div
                    class="v-list theme--light"
                    role="list"
                  >
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__title"
                        >
                          Delete
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                primary=""
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        primary=""
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                  </div>
                </div>
              </div>
            </td>
             
            <td
              class="text-xs-undefined"
            >
              <div
                class="subheading primary--text"
              >
                
      Kirstinton
    
              </div>
               
              <span
                class="v-chip font-weight-bold text-uppercase caption theme--light warning white--text"
                tabindex="0"
              >
                <span
                  class="v-chip__content"
                >
                  
      Indoor
    
                </span>
              </span>
            </td>
            <td
              class="text-xs-center"
            >
              
              33
            
            </td>
            <td
              class="text-xs-right"
            >
              <div
                class="text-truncate"
              >
                
      weber.org
    
              </div>
            </td>
            <td
              class="justify-center text-xs-center"
            >
              <div
                class="v-menu"
              >
                <button
                  class="v-btn theme--dark primary primary-text--text"
                  type="button"
                >
                  <div
                    class="v-btn__content"
                  >
                    
                Manage
               
                    <i
                      aria-hidden="true"
                      class="v-icon v-icon--right material-icons theme--dark"
                    >
                      arrow_drop_down
                    </i>
                  </div>
                </button>
                <div
                  class="v-menu__content theme--light "
                  style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                >
                   
                  <div
                    class="v-list theme--light"
                    role="list"
                  >
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__title"
                        >
                          Delete
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                primary=""
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        primary=""
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                  </div>
                </div>
              </div>
            </td>
             
            <td
              class="text-xs-undefined"
            >
              <div
                class="subheading primary--text"
              >
                
      Bodehaven
    
              </div>
               
              <span
                class="v-chip font-weight-bold text-uppercase caption theme--light warning white--text"
                tabindex="0"
              >
                <span
                  class="v-chip__content"
                >
                  
      Indoor
    
                </span>
              </span>
            </td>
            <td
              class="text-xs-center"
            >
              
              78
            
            </td>
            <td
              class="text-xs-right"
            >
              <div
                class="text-truncate"
              >
                
      moen.com
    
              </div>
            </td>
            <td
              class="justify-center text-xs-center"
            >
              <div
                class="v-menu"
              >
                <button
                  class="v-btn theme--dark primary primary-text--text"
                  type="button"
                >
                  <div
                    class="v-btn__content"
                  >
                    
                Manage
               
                    <i
                      aria-hidden="true"
                      class="v-icon v-icon--right material-icons theme--dark"
                    >
                      arrow_drop_down
                    </i>
                  </div>
                </button>
                <div
                  class="v-menu__content theme--light "
                  style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                >
                   
                  <div
                    class="v-list theme--light"
                    role="list"
                  >
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__title"
                        >
                          Delete
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                primary=""
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        primary=""
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                  </div>
                </div>
              </div>
            </td>
             
            <td
              class="text-xs-undefined"
            >
              <div
                class="subheading primary--text"
              >
                
      West Susannaside
    
              </div>
               
              <span
                class="v-chip font-weight-bold text-uppercase caption theme--light warning white--text"
                tabindex="0"
              >
                <span
                  class="v-chip__content"
                >
                  
      Indoor
    
                </span>
              </span>
            </td>
            <td
              class="text-xs-center"
            >
              
              28
            
            </td>
            <td
              class="text-xs-right"
            >
              <div
                class="text-truncate"
              >
                
      
    
              </div>
            </td>
            <td
              class="justify-center text-xs-center"
            >
              <div
                class="v-menu"
              >
                <button
                  class="v-btn theme--dark primary primary-text--text"
                  type="button"
                >
                  <div
                    class="v-btn__content"
                  >
                    
                Manage
               
                    <i
                      aria-hidden="true"
                      class="v-icon v-icon--right material-icons theme--dark"
                    >
                      arrow_drop_down
                    </i>
                  </div>
                </button>
                <div
                  class="v-menu__content theme--light "
                  style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                >
                   
                  <div
                    class="v-list theme--light"
                    role="list"
                  >
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__title"
                        >
                          Delete
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                primary=""
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        primary=""
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                  </div>
                </div>
              </div>
            </td>
             
            <td
              class="text-xs-undefined"
            >
              <div
                class="subheading primary--text"
              >
                
      Shannonview
    
              </div>
               
              <span
                class="v-chip font-weight-bold text-uppercase caption theme--light warning white--text"
                tabindex="0"
              >
                <span
                  class="v-chip__content"
                >
                  
      Outdoor
    
                </span>
              </span>
            </td>
            <td
              class="text-xs-center"
            >
              
              70
            
            </td>
            <td
              class="text-xs-right"
            >
              <div
                class="text-truncate"
              >
                
      hirthe.com, hagenes.com
    
              </div>
            </td>
            <td
              class="justify-center text-xs-center"
            >
              <div
                class="v-menu"
              >
                <button
                  class="v-btn theme--dark primary primary-text--text"
                  type="button"
                >
                  <div
                    class="v-btn__content"
                  >
                    
                Manage
               
                    <i
                      aria-hidden="true"
                      class="v-icon v-icon--right material-icons theme--dark"
                    >
                      arrow_drop_down
                    </i>
                  </div>
                </button>
                <div
                  class="v-menu__content theme--light "
                  style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                >
                   
                  <div
                    class="v-list theme--light"
                    role="list"
                  >
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__title"
                        >
                          Delete
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                primary=""
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        primary=""
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                  </div>
                </div>
              </div>
            </td>
             
            <td
              class="text-xs-undefined"
            >
              <div
                class="subheading primary--text"
              >
                
      South Martinestad
    
              </div>
               
              <span
                class="v-chip font-weight-bold text-uppercase caption theme--light warning white--text"
                tabindex="0"
              >
                <span
                  class="v-chip__content"
                >
                  
      Outdoor
    
                </span>
              </span>
            </td>
            <td
              class="text-xs-center"
            >
              
              47
            
            </td>
            <td
              class="text-xs-right"
            >
              <div
                class="text-truncate"
              >
                
      
    
              </div>
            </td>
            <td
              class="justify-center text-xs-center"
            >
              <div
                class="v-menu"
              >
                <button
                  class="v-btn theme--dark primary primary-text--text"
                  type="button"
                >
                  <div
                    class="v-btn__content"
                  >
                    
                Manage
               
                    <i
                      aria-hidden="true"
                      class="v-icon v-icon--right material-icons theme--dark"
                    >
                      arrow_drop_down
                    </i>
                  </div>
                </button>
                <div
                  class="v-menu__content theme--light "
                  style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                >
                   
                  <div
                    class="v-list theme--light"
                    role="list"
                  >
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__title"
                        >
                          Delete
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </td>
          </tr>
          <tr>
            <td>
              <div
                class="v-input v-input--selection-controls v-input--checkbox v-input--hide-details theme--light"
                primary=""
              >
                <div
                  class="v-input__control"
                >
                  <div
                    class="v-input__slot"
                  >
                    <div
                      class="v-input--selection-controls__input"
                    >
                      <input
                        aria-checked="false"
                        primary=""
                        role="checkbox"
                        type="checkbox"
                        value=""
                      />
                      <div
                        class="v-input--selection-controls__ripple"
                      />
                      <i
                        aria-hidden="true"
                        class="v-icon material-icons theme--light"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                  </div>
                </div>
              </div>
            </td>
             
            <td
              class="text-xs-undefined"
            >
              <div
                class="subheading primary--text"
              >
                
      Daughertymouth
    
              </div>
               
              <span
                class="v-chip font-weight-bold text-uppercase caption theme--light warning white--text"
                tabindex="0"
              >
                <span
                  class="v-chip__content"
                >
                  
      Outdoor
    
                </span>
              </span>
            </td>
            <td
              class="text-xs-center"
            >
              
              66
            
            </td>
            <td
              class="text-xs-right"
            >
              <div
                class="text-truncate"
              >
                
      quitzon.com, sauer.com, stanton.com
    
              </div>
            </td>
            <td
              class="justify-center text-xs-center"
            >
              <div
                class="v-menu"
              >
                <button
                  class="v-btn theme--dark primary primary-text--text"
                  type="button"
                >
                  <div
                    class="v-btn__content"
                  >
                    
                Manage
               
                    <i
                      aria-hidden="true"
                      class="v-icon v-icon--right material-icons theme--dark"
                    >
                      arrow_drop_down
                    </i>
                  </div>
                </button>
                <div
                  class="v-menu__content theme--light "
                  style="max-height: auto; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
                >
                   
                  <div
                    class="v-list theme--light"
                    role="list"
                  >
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__title"
                        >
                          Delete
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
   
  <div
    class="layout align-center"
  >
    <div
      class="flex grow justify-center"
    >
      <div
        class="layout justify-center"
      >
        <ul
          class="v-pagination theme--light"
        >
          <li>
            <button
              class="v-pagination__navigation v-pagination__navigation--disabled"
              type="button"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
              >
                chevron_left
              </i>
            </button>
          </li>
          <li>
            <button
              class="v-pagination__item v-pagination__item--active primary"
              type="button"
            >
              1
            </button>
          </li>
          <li>
            <button
              class="v-pagination__navigation v-pagination__navigation--disabled"
              type="button"
            >
              <i
                aria-hidden="true"
                class="v-icon material-icons theme--light"
              >
                chevron_right
              </i>
            </button>
          </li>
        </ul>
      </div>
    </div>
     
    <div
      class="flex shrink"
    >
      <div
        class="v-input v-text-field v-select v-input--is-label-active v-input--is-dirty theme--light"
        role="combobox"
      >
        <div
          class="v-input__control"
        >
          <div
            class="v-input__slot"
          >
            <div
              class="v-select__slot"
            >
              <label
                aria-hidden="true"
                class="v-label v-label--active theme--light"
                style="left: 0px; position: absolute;"
              >
                Results Per Page
              </label>
              <div
                class="v-select__selections"
              >
                <div
                  class="v-select__selection v-select__selection--comma"
                >
                  10
                </div>
                <input
                  aria-label="Results Per Page"
                  aria-readonly="false"
                  autocomplete="on"
                  readonly="readonly"
                  type="text"
                />
              </div>
              <div
                class="v-input__append-inner"
              >
                <div
                  class="v-input__icon v-input__icon--append"
                >
                  <i
                    aria-hidden="true"
                    class="v-icon material-icons theme--light"
                  >
                    arrow_drop_down
                  </i>
                </div>
              </div>
            </div>
            <div
              class="v-menu"
            >
              <div
                class="v-menu__content theme--light "
                style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
              >
                <div
                  class="v-select-list v-card theme--light"
                >
                  <div
                    class="v-list theme--light"
                    role="list"
                  >
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__content"
                        >
                          <div
                            class="v-list__tile__title"
                          >
                            5
                          </div>
                        </div>
                      </a>
                    </div>
                    <div
                      class="primary--text"
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
                      >
                        <div
                          class="v-list__tile__content"
                        >
                          <div
                            class="v-list__tile__title"
                          >
                            10
                          </div>
                        </div>
                      </a>
                    </div>
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__content"
                        >
                          <div
                            class="v-list__tile__title"
                          >
                            15
                          </div>
                        </div>
                      </a>
                    </div>
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__content"
                        >
                          <div
                            class="v-list__tile__title"
                          >
                            25
                          </div>
                        </div>
                      </a>
                    </div>
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__content"
                        >
                          <div
                            class="v-list__tile__title"
                          >
                            30
                          </div>
                        </div>
                      </a>
                    </div>
                    <div
                      role="listitem"
                    >
                      <a
                        class="v-list__tile v-list__tile--link theme--light"
                      >
                        <div
                          class="v-list__tile__content"
                        >
                          <div
                            class="v-list__tile__title"
                          >
                            50
                          </div>
                        </div>
                      </a>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="v-text-field__details"
          >
            <div
              class="v-messages theme--light"
            >
              <div
                class="v-messages__wrapper"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
